CMake: Build docs for Qt 3D

In order to pass correct Qt include paths to QDoc's Clang-based C++
parser, move the documentation project to be under src/core.

Fixes: QTBUG-88838
Change-Id: Ie1608eb295d94f20ef0089f73f3df1aceb566c14
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
(cherry picked from commit 44cae613ffa934cc358b97994a65c54a9bc2d8a6)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>