src/core/core.pro
@@ -4,6 +4,8 @@ MODULE = 3dcore
 QT = core-private gui-private network
 QT_FOR_PRIVATE = concurrent
 
+QMAKE_DOCS = $$PWD/doc/qt3d.qdocconf
+
 gcov {
     QMAKE_CXXFLAGS += -fprofile-arcs -ftest-coverage
     QMAKE_LFLAGS += -fprofile-arcs -ftest-coverage
@@ -20,3 +22,4 @@ include(services/services.pri)
 include(aspect/aspect.pri)
 
 load(qt_module)
+QMAKE_DOCS_TARGETDIR = qt3d
